--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@google-cloud/storage": "^7.17.3",
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-documents/picker": "^10.1.3",
+    "@react-native-documents/picker": "^10.1.7",
     "@react-native-firebase/app": "^22.2.1",
     "@react-native-firebase/messaging": "^22.2.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^1.10.0",
     "graphql": "^15.10.1",
     "lottie-react-native": "^7.2.2",
@@ -25,6 +27,7 @@
     "react-native": "0.79.2",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-date-picker": "^5.0.12",
+    "react-native-device-info": "^14.1.1",
     "react-native-easy-grid": "^0.2.2",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
